add services section

--- a/index.html
+++ b/index.html
@@ -11,13 +11,250 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/gutenberg-editor.css">
+    <link rel="stylesheet" href="assets/css/services.css">
+    <link rel="stylesheet" href="assets/css/about.css">
     <script src="assets/js/modal.js" defer></script>
+    <script src="assets/js/services.js" defer></script>
 
 </head>
 
 <body>
 
     <main>
+        <section class="services container section_indent">
+            <h2 class="title-section">Наши услуги</h2>
+            <ul class="services__list">
+                <li class="services__item">
+                    <div class="service">
+                        <div class="service__top">
+                            <h3 class="service__title">Получение <strong>ипотеки в ОАЭ</strong></h3>
+                            <span>{1}</span>
+                        </div>
+                        <div class="service__background" style="background-image: url(/assets/images/services/1.webp);">
+                        </div>
+                        <div class="service__content">
+                            <ul class="service__list">
+                                <li class="service__item">
+                                    <p class="service__desc">Поможем добиться одобрения с минимальным пакетом
+                                        документов: ID, паспортом, salary certificate и выпиской из банка — всего за 3
+                                        месяца вместо стандартных 6</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Организуем дистанционный процесс получения кредита с
+                                        необходимостью личного присутствия только на подписании офера</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Обеспечим лучшие условия сделки — почти все наши клиенты
+                                        получают ставку по ипотеке 4,18%</p>
+                                </li>
+                            </ul>
+                            <button class="btn service__btn np-button">Узнать подробнее</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="services__item">
+                    <div class="service">
+                        <div class="service__top">
+                            <h3 class="service__title">Получение <strong>Emirates ID</strong></h3>
+                            <span>{2}</span>
+                        </div>
+                        <div class="service__background" style="background-image: url(/assets/images/services/2.webp);">
+                        </div>
+                        <div class="service__content">
+                            <ul class="service__list">
+                                <li class="service__item">
+                                    <p class="service__desc">Окажем содействие в получении резидентских виз: визы
+                                        инвестора, рабочей визы, фриланс-визы и «золотой визы»</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Предоставим возможность пользоваться всеми преимуществами
+                                        резидента ОАЭ</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Подберем оптимальный тип визы в зависимости от вашего
+                                        запроса</p>
+                                </li>
+                            </ul>
+                            <button class="btn service__btn np-button">Узнать подробнее</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="services__item">
+                    <div class="service">
+                        <div class="service__top">
+                            <h3 class="service__title">Открытие <strong>компании</strong></h3>
+                            <span>{3}</span>
+                        </div>
+                        <div class="service__background" style="background-image: url(/assets/images/services/3.webp);">
+                        </div>
+                        <div class="service__content">
+                            <ul class="service__list">
+                                <li class="service__item">
+                                    <p class="service__desc">Откроем коммерческую или профессиональную лицензию на
+                                        материке или во фризоне</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Предложим оптимальный вариант регистрации, исходя из
+                                        особенностей вашего бизнеса</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Сделаем процесс открытия компании понятным, прозрачным и
+                                        предсказуемым</p>
+                                </li>
+                            </ul>
+                            <button class="btn service__btn np-button">Узнать подробнее</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="services__item">
+                    <div class="service">
+                        <div class="service__top">
+                            <h3 class="service__title">Открытие банковских счетов</h3>
+                            <span>{4}</span>
+                        </div>
+                        <div class="service__background" style="background-image: url(/assets/images/services/4.webp);">
+                        </div>
+                        <div class="service__content">
+                            <ul class="service__list">
+                                <li class="service__item">
+                                    <p class="service__desc">Оперативно откроем личные и корпоративные счета в ОАЭ</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Подберем банк, условия и валюту под ваши цели и задачи</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Обеспечим возможность работы с любыми странами и
+                                        контрагентами</p>
+                                </li>
+                            </ul>
+                            <button class="btn service__btn np-button">Узнать подробнее</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="services__item">
+                    <div class="service">
+                        <div class="service__top">
+                            <h3 class="service__title">Продление и отмена <strong>визы</strong></h3>
+                            <span>{5}</span>
+                        </div>
+                        <div class="service__background" style="background-image: url(/assets/images/services/5.webp);">
+                        </div>
+                        <div class="service__content">
+                            <ul class="service__list">
+                                <li class="service__item">
+                                    <p class="service__desc">Своевременно продлим визу нужного типа</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Отменим визу в случае ее неактуальности или необходимости
+                                        замены</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Поможем избежать штрафов и юридических последствий
+                                        нарушения визового законодательства</p>
+                                </li>
+                            </ul>
+                            <button class="btn service__btn np-button">Узнать подробнее</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="services__item">
+                    <div class="service">
+                        <div class="service__top">
+                            <h3 class="service__title">Продление и отмена <strong>бизнес-лицензии</strong></h3>
+                            <span>{6}</span>
+                        </div>
+                        <div class="service__background" style="background-image: url(/assets/images/services/6.webp);">
+                        </div>
+                        <div class="service__content">
+                            <ul class="service__list">
+                                <li class="service__item">
+                                    <p class="service__desc">Окажем всестороннюю поддержку при продлении лицензии</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Поможем непрерывно вести бизнес на законных основаниях</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Урегулируем все вопросы с аннулированием неактуальной
+                                        лицензии</p>
+                                </li>
+                            </ul>
+                            <button class="btn service__btn np-button">Узнать подробнее</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="services__item">
+                    <div class="service">
+                        <div class="service__top">
+                            <h3 class="service__title">Легализация <strong>документов</strong></h3>
+                            <span>{7}</span>
+                        </div>
+                        <div class="service__background" style="background-image: url(/assets/images/services/7.webp);">
+                        </div>
+                        <div class="service__content">
+                            <ul class="service__list">
+                                <li class="service__item">
+                                    <p class="service__desc">Придадим юридическую силу на территории ОАЭ документам об
+                                        образовании, заключении брака и рождении детей</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Обеспечим с помощью легализации документов получение
+                                        рабочей визы, спонсорской визы мужа или жены, а также открытие Emirates ID для
+                                        детей</p>
+                                </li>
+                                <li class="service__item">
+                                    <p class="service__desc">Обеспечим возможность работы с любыми странами и
+                                        контрагентами</p>
+                                </li>
+                            </ul>
+                            <button class="btn service__btn np-button">Узнать подробнее</button>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        <section class="about container section_indent">
+            <h2 class="title-section">О нас</h2>
+            <div class="about__body">
+                <div class="about__text">
+                    <p>Мы — консалтинговая компания, которая помогает бизнесу расти, находить новые возможности и
+                        справляться с вызовами. Работаем с цифрами, стратегиями и людьми — и всегда стремимся к
+                        практическому результату. Скоро здесь появится подробная история о нас. Пока что — просто делаем
+                        свою работу.
+                        <br /> <br />
+                        Мы — те, кто помогает бизнесу не тонуть в хаосе и неопределённости. Умеем находить структуру в
+                        беспорядке, задавать правильные вопросы и предлагать работающие решения. Здесь скоро будет чуть
+                        больше текста и чуть меньше загадок. Здесь скоро будет чуть больше текста и чуть меньше загадок.
+                        <br /><br />
+                        Мы — те, кто помогает бизнесу не тонуть в хаосе и неопределённости. Умеем находить структуру в
+                        беспорядке, задавать правильные вопросы и предлагать работающие решения. Здесь скоро будет чуть
+                        больше текста и чуть меньше загадок. Здесь скоро будет чуть больше текста и чуть меньше загадок.
+
+                    </p>
+
+                </div>
+                <div class="about__image" style="background-image: url(/assets/images/about/1.png);"></div>
+            </div>
+            <ul class="about__list">
+                <li class="about__item">
+                    <div class="about__card">
+                        <h3 class="about__subtitle">30+</h3>
+                        <p>Успешных кейсов</p>
+                    </div>
+                </li>
+                <li class="about__item">
+                    <div class="about__card">
+                        <h3 class="about__subtitle">4+ лет</h3>
+                        <p>На рынке Дубая</p>
+                    </div>
+                </li>
+                <li class="about__item">
+                    <div class="about__card">
+                        <h3 class="about__subtitle">30+</h3>
+                        <p>Успешных кейсов</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
         <button class="open-modal-button" data-open-modal-with-id="modal-offer">Open note</button>
 
         <button class="open-modal-button" data-open-modal-with-id="modal-form">Open form</button>
@@ -100,8 +337,7 @@
                         </div>
                     </div>
                 </div>
-                <button type="submit" 
-                    class="np-button form__button submit ">Оставить заявку</button>
+                <button type="submit" class="np-button form__button submit ">Оставить заявку</button>
             </form>
 
             <button class="modal__close modal__cross-button">
@@ -116,7 +352,7 @@
                     Ваша заявка отправлена!
                 </h2>
                 <p class="modal__text">
-                    Оператор свяжется с вами <br/> в течении рабочего дня.
+                    Оператор свяжется с вами <br /> в течении рабочего дня.
                 </p>
                 <button class=" np-button modal__close">Понятно</button>
             </div>
